# bytegate

./: Makefile  README.md  pyproject.toml
bytegate/: __init__.py  client.py  config.py  models.py  router.py  server.py
examples/: README.md  fastapi_app.py  send_request.py  ws_echo_client.py
test/: __init__.py  test_bytegate.py
