[project]
name = "bytegate"
version = "0.1.0"
description = "A transparent Redis-backed WebSocket gateway that relays bytes between distributed systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Jan Bjørge" },
]
keywords = [
    "websocket",
    "redis",
    "gateway",
    "relay",
    "pubsub",
    "async",
    "distributed",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
]

[project.urls]
Homepage = "https://github.com/janbjorge/bytegate"
Repository = "https://github.com/janbjorge/bytegate"
Documentation = "https://github.com/janbjorge/bytegate#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bytegate"]

[tool.hatch.build.targets.sdist]
include = [
    "bytegate/",
    "README.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
package = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["test.*"]
check_untyped_defs = false
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["bytegate.router"]
disallow_untyped_decorators = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["test"]
